--- a/tweetset/tweetset/settings/passwords.py.example
+++ b/tweetset/tweetset/settings/passwords.py.example
@@ -1,5 +1,5 @@
-SOCIAL_AUTH_TWITTER_KEY = 'EGmxjE55yVQigPCPWoMqdRsNp'
-SOCIAL_AUTH_TWITTER_SECRET = '9rnyiG5HRHH187hkaaCaSADHNP4tRAD4Ob7SZiCJb9lSbWw3Pg'
+SOCIAL_AUTH_TWITTER_KEY = 'TWITTER  -  KEY  -  HERE'
+SOCIAL_AUTH_TWITTER_SECRET = 'TWITTER  -  SECRET  -  HERE'
 
 SUPERVISOR_USER = 'user'
 SUPERVISOR_PASSWORD = '123'
