--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-Django==1.7
-python-social-auth==0.2.1
-django-debug-toolbar==1.2.1
-jsonfield==1.0.0
-supervisor==3.1.2
+Django==1.9.7
+django-debug-toolbar==1.4
+django-widget-tweaks==1.4.1
+jsonfield==1.0.3
+meld3==1.0.2
+oauthlib==1.1.2
+psycopg2==2.6.1
+PyJWT==1.4.0
+python-openid==2.2.5
+python-social-auth==0.2.19
+requests==2.10.0
+requests-oauthlib==0.6.1
+six==1.10.0
+sqlparse==0.1.19
+supervisor==3.3.0
 supervisor-twiddler==1.0.0
-twython==3.1.2
-django-widget-tweaks==1.3
-wsgiref==0.1.2
-#psycopg2==2.5.4
-
+twython==3.4.0
