--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,6 @@ bower_components
 tweetset/tweetset/settings/passwords.py
 tweetset/tweetset/settings/base.py
 
-env/
+env/*
+tweetset/manage.py
+*.DS_Store*
