--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
+arrow==0.8.0
 Django==1.9.7
 django-debug-toolbar==1.4
 django-widget-tweaks==1.4.1
 jsonfield==1.0.3
 meld3==1.0.2
+nltk==3.2.1
+numpy==1.11.1
 oauthlib==1.1.2
+pandas==0.18.1
 psycopg2==2.6.1
 PyJWT==1.4.0
+python-dateutil==2.5.3
 python-openid==2.2.5
 python-social-auth==0.2.19
+pytz==2016.4
 requests==2.10.0
 requests-oauthlib==0.6.1
 six==1.10.0
@@ -16,3 +22,4 @@ supervisor==3.3.0
 supervisor-twiddler==1.0.0
 tweepy==3.5.0
 twython==3.4.0
+vincent==0.4.4
