--- a/supervisord.conf
+++ b/supervisord.conf
@@ -134,6 +134,10 @@ password=123                ; should be same as http_password if set
 ;programs=progname1,progname2  ; each refers to 'x' in [program:x] definitions
 priority=999                  ; the relative start priority (default 999)
 
+[group:tweetstats]
+;programs=progname1,progname2  ; each refers to 'x' in [program:x] definitions
+priority=999                  ; the relative start priority (default 999)
+
 ; The [include] section can just contain the "files" setting.  This
 ; setting can list multiple files (separated by whitespace or
 ; newlines).  It can also contain wildcards.  The filenames are
